--- a/Fraud_Detection.ipynb
+++ b/Fraud_Detection.ipynb
@@ -5,19 +5,19 @@
    "metadata": {},
    "source": [
     "## Fraud Detection\n",
-    "1. #### We use RandomForestClassfier to predict transaction.\n",
+    "1. We use RandomForestClassfier to predict transaction.\n",
     "\n",
-    "1. #### Data Preprocessing\n",
+    "1. Data Preprocessing\n",
     "    * Merge two data frame.\n",
     "    * Handle missing data field.\n",
     "    \n",
-    "1. #### Model's performance\n",
+    "1. Model's performance\n",
     "    * Accuracy\n",
     "    * Recall Score\n",
     "    * Precision Score\n",
     "    * F1 Score\n",
     " \n",
-    "1. ##### Imbalanced Dataset\n",
+    "1. Imbalanced Dataset\n",
     "    * Under-sampling"
    ]
   },
@@ -220,7 +220,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model score value:0.979.\n",
+      "Model score value:0.9775.\n",
       "{0: 15563, 1: 436} Percentage of fraud:0.027251703231451967\n"
      ]
     },
@@ -257,13 +257,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>3873</td>\n",
-       "      <td>1</td>\n",
+       "      <td>3872</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>83</td>\n",
-       "      <td>43</td>\n",
+       "      <td>88</td>\n",
+       "      <td>38</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -272,8 +272,8 @@
       "text/plain": [
        "predict     0   1\n",
        "Answer           \n",
-       "0        3873   1\n",
-       "1          83  43"
+       "0        3872   2\n",
+       "1          88  38"
       ]
      },
      "execution_count": 6,
@@ -301,12 +301,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3873    1]\n",
-      " [  83   43]]\n",
-      "Accuracy: 97.9%\n",
-      "Recall for Model : 0.34\n",
-      "Precision for Model : 0.98\n",
-      "F1 Score for Model : 0.51\n"
+      "[[3872    2]\n",
+      " [  88   38]]\n",
+      "Accuracy: 97.75%\n",
+      "Recall for Model : 0.3\n",
+      "Precision for Model : 0.95\n",
+      "F1 Score for Model : 0.46\n"
      ]
     }
    ],
@@ -394,13 +394,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <td>0</td>\n",
-       "      <td>2957</td>\n",
-       "      <td>917</td>\n",
+       "      <td>2914</td>\n",
+       "      <td>960</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
-       "      <td>15</td>\n",
-       "      <td>111</td>\n",
+       "      <td>12</td>\n",
+       "      <td>114</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -409,8 +409,8 @@
       "text/plain": [
        "predict     0    1\n",
        "Answer            \n",
-       "0        2957  917\n",
-       "1          15  111"
+       "0        2914  960\n",
+       "1          12  114"
       ]
      },
      "execution_count": 9,
@@ -436,10 +436,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[2957  917]\n",
-      " [  15  111]]\n",
-      "Accuracy: 76.7%\n",
-      "Recall for Model : 0.88\n",
+      "[[2914  960]\n",
+      " [  12  114]]\n",
+      "Accuracy: 75.7%\n",
+      "Recall for Model : 0.9\n",
       "Precision for Model : 0.11\n",
       "F1 Score for Model : 0.19\n"
      ]
@@ -496,7 +496,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8b9c8d7128>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f412d06b128>"
       ]
      },
      "execution_count": 11,
@@ -532,7 +532,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f8b9c81d0f0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f412cfb3390>"
       ]
      },
      "execution_count": 12,
